snapshots/care/data4life/hc-result-sdk-kmp/error/0.2.0-SNAPSHOT/error-0.2.0-20210906.104450-1.module.sha512
f69b32df97f04888fe196edb0c002e2aa73a25931041137b6bc969a680be456b44c466f911e1fe9280c325075f2bfc3f6b05112d7fa1005e6d105d905902b493